--- a/Bluetooth.Maui.Sample.Scanner/Platforms/Windows/App.xaml
+++ b/Bluetooth.Maui.Sample.Scanner/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
-<maui:WinUIApplication
+<maui:MauiWinUIApplication
     x:Class="Bluetooth.Maui.Sample.Scanner.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
     xmlns:local="using:Bluetooth.Maui.Sample.Scanner.WinUI">
 
-</maui:WinUIApplication>
+</maui:MauiWinUIApplication>
